--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>
-            This is my Github Pages Website
+            This is my GitHub Pages website
         </h1>
     </body>
 </html>
